<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="65dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:gravity="center"
            android:text="@string/one_one" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:gravity="center"
            android:layout_margin="2dp"
            android:text="@string/one_two" />

        <TextView
            android:layout_width="70dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:gravity="center"
            android:text="@string/one_three" />

        <TextView
            android:layout_width="65dp"
            android:layout_height="25dp"
            android:gravity="center"
            android:layout_margin="2dp"
            android:text="@string/one_four" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="65dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:gravity="center"
            android:text="@string/two_one" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:gravity="center"
            android:layout_margin="2dp"
            android:text="@string/two_two" />

        <TextView
            android:layout_width="70dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:gravity="center"
            android:text="@string/two_three" />

        <TextView
            android:layout_width="65dp"
            android:layout_height="25dp"
            android:gravity="center"
            android:layout_margin="2dp"
            android:text="@string/two_four" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="70dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:gravity="center"
            android:text="@string/three_one" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:gravity="center"
            android:layout_margin="2dp"
            android:text="@string/three_two" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:gravity="center"
            android:text="@string/three_three" />

        <TextView
            android:layout_width="70dp"
            android:layout_height="25dp"
            android:gravity="center"
            android:layout_margin="2dp"
            android:text="@string/three_four" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="65dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:gravity="center"
            android:text="@string/four_one" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:gravity="center"
            android:layout_margin="2dp"
            android:text="@string/four_two" />

        <TextView
            android:layout_width="70dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:gravity="center"
            android:text="@string/four_three" />

        <TextView
            android:layout_width="65dp"
            android:layout_height="25dp"
            android:gravity="center"
            android:layout_margin="2dp"
            android:text="@string/four_four" />
    </LinearLayout>


</LinearLayout>