<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">


    <!-- 顶部三个图片 -->
    <ImageView
        android:id="@+id/iv_space_stations"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/space_station"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="1"
        android:contentDescription="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_space_stations"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="28dp"
        android:text="@string/space_stations"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_space_stations"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/iv_flights"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/rocket"
        android:contentDescription="@string/save"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/iv_space_stations"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_flights"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="154dp"
        android:text="@string/flights"
        app:layout_constraintStart_toStartOf="@+id/tv_space_stations"
        app:layout_constraintTop_toBottomOf="@+id/iv_flights"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/iv_rovers"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/rover"
        android:contentDescription="@string/save"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/iv_flights"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_rovers"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="119dp"
        android:text="@string/rovers"
        app:layout_constraintStart_toStartOf="@id/tv_flights"
        app:layout_constraintTop_toBottomOf="@id/iv_rovers"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/tv_dca"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="64dp"
        android:background="#2E7D32"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/dca"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_space_stations"
        app:layout_constraintWidth_percent="0.4" />

    <TextView
        android:id="@+id/tv_mars"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="60dp"
        android:background="#2E7D32"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/mars"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_flights"
        app:layout_constraintWidth_percent="0.4" />

    <ImageView
        android:id="@+id/iv_swap"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="84dp"
        android:src="@drawable/double_arrows"
        android:contentDescription="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_flights" />

    <TextView
        android:id="@+id/tv_traveller"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="#B96424"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/_1_traveller"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_example" />

    <ImageView
        android:id="@+id/iv_planet"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:contentDescription="@string/save"
        android:src="@drawable/galaxy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_rocket"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.603" />

    <ImageView
        android:id="@+id/iv_rocket"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:src="@drawable/rocket"
        android:contentDescription="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.302"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.601" />

    <TextView
        android:id="@+id/tv_depart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="#2E7D32"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/depart"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/switch_example"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="252dp"
        android:background="#B96424"
        android:switchPadding="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/one_way"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

</androidx.constraintlayout.widget.ConstraintLayout>